# words-segmentation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
examples/: tokens_parity.py
tests/: test_chinese.py  test_japanese.py  test_pretokenizer.py  test_signwriting.py  test_word_stopping_criteria.py
words_segmentation/: chinese.py  japanese.py  languages.py  pretokenizer.py  signwriting.py  tokenizer.py
